changes for ofp and ncf2cbh when ofp files written on either side of new day

--- a/nhmusgs-ncf2cbh/Dockerfile
+++ b/nhmusgs-ncf2cbh/Dockerfile
@@ -2,6 +2,12 @@ FROM nhmusgs/base
 
 LABEL maintainer="ashalper@usgs.gov"
 
+
+# ofp script
+COPY --chown=nhm ncf2cbh /usr/local/bin
+
+RUN chmod 744 /usr/local/bin/ncf2cbh
+
 USER $USER
 
 WORKDIR /home/$USER
@@ -9,4 +15,4 @@ WORKDIR /home/$USER
 ENV NUMDAYS=60
 
 ENTRYPOINT \
-  ["/opt/conda/bin/python", "-u", "/usr/local/src/onhm-runners/ncf2cbh/ncf2cbh_gfv11.py", "/nhm/NHM-PRMS_CONUS_GF_1_1/input/"]
+  ["/bin/bash", "-c", "/usr/local/bin/ncf2cbh"]
