Re-wrote download of onhm-verify-eval source.

--- a/nhmusgs-verifier/Dockerfile
+++ b/nhmusgs-verifier/Dockerfile
@@ -3,12 +3,10 @@ FROM nhmusgs/base:1.0
 LABEL maintainer="ashalper@usgs.gov"
 
 ARG VERSION_TAG_VERIFY=0.1.1
-
-RUN git -c advice.detachedHead=false clone https://github.com/nhm-usgs/onhm-verify-eval.git --branch $VERSION_TAG_VERIFY --depth=1 $NHM_SOURCE_DIR/onhm-verify-eval && \
-    cd $NHM_SOURCE_DIR/onhm-verify-eval && \
-    rm -rf .git || true && \
-    rm .gitignore || true && \
-    rm Dockerfile || true
+RUN wget -P $NHM_SOURCE_DIR -nv https://github.com/nhm-usgs/onhm-verify-eval/archive/$VERSION_TAG_VERIFY.tar.gz
+RUN cd $NHM_SOURCE_DIR && tar -xzf $VERSION_TAG_VERIFY.tar.gz
+RUN mv $NHM_SOURCE_DIR/onhm-verify-eval-$VERSION_TAG_VERIFY $NHM_SOURCE_DIR/onhm-verify-eval
+RUN rm $NHM_SOURCE_DIR/$VERSION_TAG_VERIFY.tar.gz
 
 USER $USER
 
