--- a/nhmusgs-nhm-prms/Dockerfile
+++ b/nhmusgs-nhm-prms/Dockerfile
@@ -4,10 +4,11 @@ LABEL maintainer="ashalper@usgs.gov"
 
 ARG VERSION_TAG_PRMS=5.1.0.4_linux
 
-# TODO: replace --no-check-certificate here with logic to work around
-# DOI SSL intercept. See
-# https://github.com/usgs/best-practices/blob/master/ssl/WorkingWithinSSLIntercept.md
-RUN wget --no-check-certificate -P $NHM_SOURCE_DIR -nv \
+# TODO: value of this needs to be computed and passed in; see also base
+# image Dockerfile.
+ARG certificate='--no-check-certificate'
+
+RUN wget $certificate -P $NHM_SOURCE_DIR -nv \
     https://github.com/nhm-usgs/prms/archive/$VERSION_TAG_PRMS.tar.gz
 
 RUN cd $NHM_SOURCE_DIR && tar -xzf $VERSION_TAG_PRMS.tar.gz
