Factored-out cbhfiller and ncf2cbh, bash entry-point scripts.

--- a/nhmusgs-ncf2cbh/Dockerfile
+++ b/nhmusgs-ncf2cbh/Dockerfile
@@ -2,15 +2,11 @@ FROM nhmusgs/base:1.0
 
 LABEL maintainer="ashalper@usgs.gov"
 
-
-# ofp script
-COPY --chown=nhm ncf2cbh /usr/local/bin
-
-RUN chmod 744 /usr/local/bin/ncf2cbh
-
 USER $USER
 
 WORKDIR /home/$USER
 
-ENTRYPOINT \
-  ["/bin/bash", "-c", "/usr/local/bin/ncf2cbh"]
+ENTRYPOINT /opt/conda/bin/python -u \
+    "$NHM_SOURCE_DIR/onhm-runners/ncf2cbh/ncf2cbh_gfv11.py" \
+    /nhm/NHM-PRMS_CONUS_GF_1_1/input/ \
+    "$END_DATE"
