--- a/nhmusgs-gridmet-current/Dockerfile
+++ b/nhmusgs-gridmet-current/Dockerfile
@@ -2,9 +2,11 @@ FROM nhmusgs/base:1.0
 
 LABEL maintainer="ashalper@usgs.gov"
 
+COPY --chown=nhm gridmet-current /usr/local/bin
+RUN chmod 744 /usr/local/bin/gridmet-current
+
 USER $USER
 
 WORKDIR $NHM_SOURCE_DIR
 
-ENTRYPOINT \
-  ["/opt/conda/bin/python", "-u", "/usr/local/src/gridmetetl/gridmetetl/Gridmet_current.py"]
+ENTRYPOINT ["/bin/bash", "-c", "/usr/local/bin/gridmet-current"]
