--- a/nhm.env
+++ b/nhm.env
@@ -41,3 +41,6 @@ SOURCE=/caldera/projects/usgs/water/impd/$USER
 
 # The (host machine) directory to save pipeline output to.
 OUTPUT_DIR=.
+
+# Verifier service, work directory. See https://github.com/nhm-usgs/onhm-verify-eval
+VERIFIER_WORK_DIR=/nhm/NHM-PRMS_CONUS_GF_1_1
