I've got the s2s ETL working, re-engineered containers with hard-wired paths, by adding new vars to nhm.env and docker-compose.yml so there is more flexibility in calling the same container for either daily operation or forecasting operation

--- a/nhm.env
+++ b/nhm.env
@@ -14,7 +14,7 @@ NHM_SOURCE_DIR=/usr/local/src
 HRU_DATA_PKG=Data_hru_shp_gfv11_v2.zip
 
 # name of PRMS data file archive
-PRMS_DATA_PKG=NHM-PRMS_CONUS_GF_1_1_rlinux_v2.zip
+PRMS_DATA_PKG=NHM-PRMS_CONUS_GF_1_1_fcst_2.zip
 
 # HRU shapefile archive URL
 HRU_SOURCE=ftp://ftpext.usgs.gov/pub/cr/co/denver/BRR-CR/pub/rmcd/$HRU_DATA_PKG
@@ -32,13 +32,47 @@ GRIDMET_DISABLE=true
 # pipeline run-time to a point where interactive testing is
 # feasible.
 START_DATE=
-END_DATE=2020-01-02
-SAVE_RESTART_DATE=2020-01-02
+END_DATE=2021-01-02
+SAVE_RESTART_DATE=2021-01-02
 VAR_SAVE_FILE=
 
-# Variables for CBH_FILLER
-CBH_IDIR=/nhm/NHM-PRMS_CONUS_GF_1_1/input
-CBH_ODIR=/nhm/NHM-PRMS_CONUS_GF_1_1/input
+# Variables for op-ncf2cbh
+OP_NCF_IDIR=/nhm/NHM-PRMS_CONUS_GF_1_1/input/
+OP_NCF_DATE=
+OP_NCF_PREFIX=climate_
+
+# Variables for op-CBH_FILLER
+OP_CBH_IDIR=/nhm/NHM-PRMS_CONUS_GF_1_1/input/
+OP_CBH_ODIR=/nhm/NHM-PRMS_CONUS_GF_1_1/input/
+
+# Variables for gridmets2s
+S2S_GMTYPE=day2
+S2S_MODELSHAPE=/nhm/gridmetetl/nhm_hru_data_gfv11/GFv1.1_v2e_geographic.shp
+S2S_MODELWGHTS=/nhm/gridmetetl/nhm_hru_data_gfv11/tmp_Gridmet_weights_hru_v1_1e.csv
+S2S_OPATH=/nhm/NHM-PRMS_CONUS_GF_1_1/forecast/input
+S2S_ELEVFILE=/nhm/gridmetetl/nhm_hru_data_gfv11/package.gpkg
+S2S_INTERPTYPE=area_weighted_mean
+S2S_DATE=
+
+# Variables for gridmets2s-ncf2cbh
+S2S_NCF_IDIR=/nhm/NHM-PRMS_CONUS_GF_1_1/forecast/input/
+S2S_NCF_DATE=
+S2S_NCF_PREFIX=f_climate_
+
+# Variables for gridmets2s-CBH_FILLER
+S2S_CBH_IDIR=/nhm/NHM-PRMS_CONUS_GF_1_1/forecast/input/
+S2S_CBH_ODIR=/nhm/NHM-PRMS_CONUS_GF_1_1/forecast/input/
+
+# PRMS variables
+PRMS_START_TIME=
+PRMS_END_TIME=
+PRMS_INIT_VARS_FROM_FILE=1
+PRMS_VAR_INIT_FILE=
+PRMS_VAR_SAVE_FILE=
+
+#PRMS output
+OP_DIR=/nhm/NHM-PRMS_CONUS_GF_1_1/
+S2S_DIR=/nhm/NHM-PRMS_CONUS_GF_1_1/forecast/
 
 # When "true", tell the Docker entry-point scripts to print values of
 # relevant environment variables to stdout, then exit, without running
@@ -54,3 +88,4 @@ SOURCE=nhm
 
 # The (host machine) directory to save pipeline output to.
 OUTPUT_DIR=.
+FRCST_DIR=./forecast
