--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,9 @@ volumes:
     driver: local
 
 services:
-    
+
   base_image:
-    build: 
+    build:
       context: ./nhmusgs-base
       args:
         insecure: "-k"
@@ -28,20 +28,43 @@ services:
     container_name: gridmet
     env_file:
       - nhm.env
-      
-  ofp:
+
+  gridmetetl:
     build:
-      context: ./nhmusgs-ofp
+      context: ./nhmusgs-gridmetetl
       labels:
         - "gov.usgs.nhm.image.docker.application=NHM"
-        - "gov.usgs.nhm.image.docker.type=OFP"
-    image: nhmusgs/ofp
-    container_name: ofp
+        - "gov.usgs.nhm.image.docker.type=GRIDMET ETL"
+    image: nhmusgs/gridmetetl
+    container_name: gridmetetl
     environment:
       - CBH_IDIR
       - START_DATE
       - END_DATE
       - NHM_SOURCE_DIR
+    env_file:
+      - nhm.env
+    volumes:
+      - nhm:/nhm
+
+  gridmets2s:
+    build:
+      context: ./nhmusgs-gridmets2s
+      args:
+        insecure: "-k"
+      labels:
+        - "gov.usgs.nhm.image.docker.application=NHM"
+        - "gov.usgs.nhm.image.docker.type=GRIDMETETL_S2S"
+    image: nhmusgs/gridmets2s
+    container_name: gridmets2s
+    environment:
+      - S2S_GMTYPE
+      - S2S_MODELSHAPE
+      - S2S_MODELWGHTS
+      - S2S_OPATH
+      - S2S_ELEVFILE
+      - S2S_INTERPTYPE
+      - S2S_DATE
     env_file:
       - nhm.env
     volumes:
@@ -55,6 +78,10 @@ services:
         - "gov.usgs.nhm.image.docker.type=NCF2CBH"
     image: nhmusgs/ncf2cbh
     container_name: ncf2cbh
+    environment:
+      - NCF_IDIR
+      - NCF_DATE
+      - NCF_PREFIX
     env_file:
       - nhm.env
     volumes:
@@ -85,13 +112,16 @@ services:
     image: nhmusgs/nhm-prms
     container_name: nhm-prms
     environment:
-      - END_TIME
-      - NHM_SOURCE_DIR
-      - SAVE_VARS_TO_FILE
+      - PRMS_START_TIME
+      - PRMS_END_TIME
+      - PRMS_INIT_VARS_FROM_FILE
+      - PRMS_VAR_INIT_FILE
+      - PRMS_SAVE_VARS_TO_FILE
+      - PRMS_VAR_SAVE_FILE
+      - PRMS_RESTART_DATE
       - START_DATE
-      - START_TIME
       - RESTART_DATE
-      - VAR_SAVE_FILE
+      - NHM_SOURCE_DIR
     env_file:
       - nhm.env
     volumes:
@@ -105,6 +135,8 @@ services:
         - "gov.usgs.nhm.image.docker.type=OUT 2 NCF"
     image: nhmusgs/out2ncf
     container_name: out2ncf
+    environment:
+      - OUT_NCF_DIR
     env_file:
       - nhm.env
     volumes:
