--- a/nhm.env
+++ b/nhm.env
@@ -36,6 +36,9 @@ END_DATE=2021-01-02
 SAVE_RESTART_DATE=2021-01-02
 VAR_SAVE_FILE=
 
+# Set conditional statement to run the forecast
+FORECAST_ENABLE=false
+
 # Variables for op-ncf2cbh
 OP_NCF_IDIR=/nhm/NHM-PRMS_CONUS_GF_1_1/input/
 OP_NCF_DATE=
@@ -69,6 +72,10 @@ PRMS_END_TIME=
 PRMS_INIT_VARS_FROM_FILE=1
 PRMS_VAR_INIT_FILE=
 PRMS_VAR_SAVE_FILE=
+PRMS_CONTROL_FILE=
+
+OP_PRMS_CONTROL_FILE=/nhm/NHM-PRMS_CONUS_GF_1_1/NHM-PRMS.control
+S2S_PRMS_CONTROL_FILE=/nhm/NHM-PRMS_CONUS_GF_1_1/forecast/NHM-PRMS.control
 
 #PRMS output
 OP_DIR=/nhm/NHM-PRMS_CONUS_GF_1_1/
