--- a/nhmusgs-nhm-out2ncf/Dockerfile
+++ b/nhmusgs-nhm-out2ncf/Dockerfile
@@ -2,9 +2,14 @@ FROM nhmusgs/base
 
 LABEL maintainer="ashalper@usgs.gov"
 
+# out2ncf script
+COPY --chown=nhm out2ncf /usr/local/bin
+
+RUN chmod 744 /usr/local/bin/out2ncf
+
 USER $USER
 
 WORKDIR /home/$USER
 
 ENTRYPOINT \
-  ["/opt/conda/bin/python", "-u", "/usr/local/src/onhm-runners/out2ncf/prms_outputs2a_ncf.py", $OUT_NCF_DIR]
+  ["/bin/bash", "-c", "/usr/local/bin/out2ncf"]
