Still debugging forecast

--- a/nhm.env
+++ b/nhm.env
@@ -38,7 +38,7 @@ FRCST_END_DATE=
 VAR_SAVE_FILE=
 
 # Set conditional statement to run the forecast
-FORECAST_ENABLE=false
+FORECAST_ENABLE=true
 
 # Variables for op-ncf2cbh
 OP_NCF_IDIR=/nhm/NHM-PRMS_CONUS_GF_1_1/input/
