Upgrade to PRMS 5.1.0.10.

--- a/nhmusgs-nhm-prms/Dockerfile
+++ b/nhmusgs-nhm-prms/Dockerfile
@@ -2,18 +2,18 @@ FROM nhmusgs/base
 
 LABEL maintainer="ashalper@usgs.gov"
 
-ARG VERSION_TAG_PRMS=5.1.0.4_linux
+ARG VERSION_TAG_PRMS=prms_5.1.0.10
+
+ARG HDF5_LDFLAGS=-L/usr/lib/x86_64-linux-gnu
+ARG NC_CPPFLAGS=-I/usr/include
+ARG NC_LDFLAGS=-L/usr/lib
 
 # Build PRMS
 RUN git -c advice.detachedHead=false clone \
-    https://github.com/nhm-usgs/prms.git --branch $VERSION_TAG_PRMS \
+    https://github.com/ashalper-usgs/prms.git --branch $VERSION_TAG_PRMS \
     --depth=1 $NHM_SOURCE_DIR/prms && \
     cd $NHM_SOURCE_DIR/prms && \
-    make && \
-    rm -rf .git || true && \
-    rm .gitignore || true && \
-    rm Makefile || true && \
-    rm makelist || true
+    make
 
 COPY --chown=nhm prms /usr/local/bin
 
