--- a/nhm.env
+++ b/nhm.env
@@ -26,7 +26,7 @@ PRMS_SOURCE=ftp://ftpext.usgs.gov/pub/cr/co/denver/BRR-CR/pub/rmcd/$PRMS_DATA_PK
 # data is not typically available until 2:45 p.m. PST, so disabling the
 # gridmet container can be useful in development to prevent the
 # pipeline from stopping at this step with an error.
-GRIDMET_DISABLE=false
+GRIDMET_DISABLE=true
 
 # Simulation interval. Presently used only in testing to diminish
 # pipeline run-time to a point where interactive testing is
@@ -74,6 +74,8 @@ PRMS_INIT_VARS_FROM_FILE=1
 PRMS_VAR_INIT_FILE=
 PRMS_VAR_SAVE_FILE=
 PRMS_CONTROL_FILE=
+# Type = 0 is for operational run and type = 1 is for forecast run
+PRMS_RUN_TYPE=0
 
 OP_PRMS_CONTROL_FILE=/nhm/NHM-PRMS_CONUS_GF_1_1/NHM-PRMS.control
 S2S_PRMS_CONTROL_FILE=/nhm/NHM-PRMS_CONUS_GF_1_1/forecast/NHM-PRMS.control
