Upgraded Miniconda 3 image (base) from 4.9.2 to 4.10.3p0.

--- a/nhmusgs-base/Dockerfile
+++ b/nhmusgs-base/Dockerfile
@@ -1,5 +1,5 @@
 # using Miniconda 3 as the base image...
-FROM continuumio/miniconda3:4.9.2
+FROM continuumio/miniconda3:4.10.3p0
 
 LABEL maintainer="ashalper@usgs.gov"
 
